# spsftp

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
spsftp/: spsftp.py
tests/: test_spsftp.py
